Add: 리뷰 추가 시 데이터 베이스 통신

--- a/src/Pages/ItemDetail/Components/InformationTab/Reviews/Reviews.scss
+++ b/src/Pages/ItemDetail/Components/InformationTab/Reviews/Reviews.scss
@@ -24,6 +24,10 @@
         }
       }
 
+      .userInfo {
+        display: flex;
+      }
+
       .userImage {
         align-self: start;
         width: 30px;
