--- a/src/Pages/SignIn/SignIn.scss
+++ b/src/Pages/SignIn/SignIn.scss
@@ -75,7 +75,7 @@ main {
       width: 460px;
       display: inline-flex;
       justify-content: space-between;
-      margin: 10px 0 0 40px;
+      margin: 10px 0 0 20px;
 
       .signInStayBtn {
         display: flex;
@@ -89,7 +89,7 @@ main {
           background-position: 0 -110px;
           background-size: 460px;
           padding: 7px 20px 10px 11px;
-          margin: 8px 0 0 0px;
+          margin-top: 8px;
           &.isSignIn {
             background-position: 0 -141px;
           }
@@ -103,7 +103,6 @@ main {
       }
 
       .ipSecurity {
-        margin-left: 10px;
         display: flex;
 
         .ipSecurityText {
@@ -117,7 +116,7 @@ main {
           background-image: url('https://static.nid.naver.com/images/ui/login/t_sp_login_190522.png');
           background-position: 0 -67px;
           background-size: 600px;
-          padding: 7px 35px 8px 11px;
+          padding: 7px 22px 8px 11px;
           margin: 20px 0 20px 0px;
           &.check {
             background-position: 0 -86px;
