--- a/src/Pages/Main/Main.scss
+++ b/src/Pages/Main/Main.scss
@@ -3,8 +3,9 @@
 
 .Main {
   position: relative;
-  width: 100vw;
+  width: 100%;
   pointer-events: initial;
+  overflow: hidden;
 
   .Nav {
     position: absolute;
@@ -41,7 +42,15 @@
   }
 
   .slide {
-    height: 800px;
+    width: 100vw;
+    height: 100vh;
+    background: #000;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
 
     .slick-prev {
       left: 27px;
@@ -76,7 +85,7 @@
     }
 
     .slick-dots {
-      bottom: 150px;
+      bottom: 20px;
       z-index: 20;
     }
   }
